--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "test": "ember test"
   },
   "devDependencies": {
+    "@ember/jquery": "^1.1.0",
     "@ember/optional-features": "^1.0.0",
+    "@fortawesome/ember-fontawesome": "^0.2.1",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "babel-eslint": "^10.0.3",
     "broccoli-asset-rev": "^3.0.0",
     "ember-cli": "~3.13.1",
@@ -50,5 +53,6 @@
   },
   "engines": {
     "node": "8.* || >= 10.*"
-  }
+  },
+  "dependencies": {}
 }
