--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "ember-cli-dependency-checker": "^3.1.0",
     "ember-cli-eslint": "^5.1.0",
     "ember-cli-htmlbars": "^4.0.0",
-    "ember-cli-htmlbars-inline-precompile": "^3.0.0",
     "ember-cli-inject-live-reload": "^2.0.1",
     "ember-cli-mirage": "^1.1.3",
     "ember-cli-sass": "^10.0.1",
@@ -49,6 +48,7 @@
     "ember-welcome-page": "^4.0.0",
     "eslint-plugin-ember": "^7.1.0",
     "eslint-plugin-node": "^10.0.0",
+    "faker": "^4.1.0",
     "loader.js": "^4.7.0",
     "qunit-dom": "^0.9.0",
     "sass": "^1.23.0"
